<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:id="@+id/teinschaetzung"
    android:orientation="vertical" >

        <TextView
            android:id="@+id/teinschaetzung1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/Einschätzung"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
         <!--TextView
        android:id="@+id/teinschaetzung2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
            -->
        <View
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:background="@drawable/gradient2" >
        </View>

        <RadioGroup
            android:id="@+id/radioGrup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radio_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:button="@drawable/radio_button"
                android:text="@string/Einschätzung1" />

            <RadioButton
                android:id="@+id/radio_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:button="@drawable/radio_button"
                android:text="@string/Einschätzung2" />

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:button="@drawable/radio_button"
                android:text="@string/Einschätzung3" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:button="@drawable/radio_button"
                android:text="@string/Einschätzung4" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:button="@drawable/radio_button"
                android:text="@string/Einschätzung5" />
        </RadioGroup>

        <View
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:background="@drawable/gradient2" >
        </View>

        <TextView
            android:id="@+id/teinschaetzung4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/Einschätzung6"
            android:textAppearance="?android:attr/textAppearanceMedium" />
</LinearLayout>