<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_alignParentTop="true"
        android:id="@+id/layTop"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/hello"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:text="@string/hello" />

        <LinearLayout
            android:id="@+id/linearMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/bmbf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical|center_horizontal"
                android:adjustViewBounds="true"
                android:src="@drawable/logos" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layTop"
        android:layout_above="@+id/LayBottom">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical" >

            <LinearLayout
                style="@android:style/ButtonBar"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:background="@color/black"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/intro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/Beschreibung"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:background="@drawable/gradient2" >
                </View>

                <LinearLayout
                    style="@android:style/ButtonBar"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/black"
                    android:orientation="horizontal" >
                    <TextView
                        android:id="@+id/step1Title"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:text=""
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/step1"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:text="@string/Anleitung1"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <LinearLayout
                    style="@android:style/ButtonBar"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/black"
                    android:orientation="horizontal" >
                    <TextView
                        android:id="@+id/step2Title"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:text=""
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/step2"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:text="@string/Anleitung2"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    style="@android:style/ButtonBar"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/black"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/step3Title"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:text=""
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/step3"
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:text="@string/Anleitung3"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    style="@android:style/ButtonBar"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/black"
                    android:orientation="horizontal" >
                    <TextView
                        android:id="@+id/step4Title"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:text=""
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/step4"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:text="@string/Anleitung4"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    style="@android:style/ButtonBar"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/black"
                    android:orientation="horizontal" >
                    <TextView
                        android:id="@+id/step5Title"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:text=""
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/step5"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:text="@string/Anleitung5"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    style="@android:style/ButtonBar"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/black"
                    android:orientation="horizontal" >
                    <TextView
                        android:id="@+id/step6Title"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:text=""
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/step6"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:text="@string/Anleitung6"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    style="@android:style/ButtonBar"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/black"
                    android:orientation="horizontal" >
                    <TextView
                        android:id="@+id/step7Title"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:text=""
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/step7"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:text="@string/Anleitung7"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    style="@android:style/ButtonBar"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/black"
                    android:orientation="horizontal" >
                    <TextView
                        android:id="@+id/step8Title"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:text=""
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/step8"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:text="@string/Anleitung8"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    style="@android:style/ButtonBar"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/black"
                    android:orientation="horizontal" >
                    <TextView
                        android:id="@+id/step9Title"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:text=""
                        android:layout_height="match_parent" />
                    <TextView
                        android:id="@+id/step9"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:text="@string/Anleitung8"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    style="@android:style/ButtonBar"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/black"
                    android:orientation="horizontal" >
                    <TextView
                        android:id="@+id/step10Title"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:text=""
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/step10"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:text="@string/Anleitung8"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    style="@android:style/ButtonBar"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/black"
                    android:orientation="horizontal" >
                    <TextView
                        android:id="@+id/step11Title"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:text=""
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/step11"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:text="@string/Anleitung8"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    style="@android:style/ButtonBar"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/black"
                    android:orientation="horizontal" >
                    <TextView
                        android:id="@+id/step12Title"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:text=""
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/step12"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:text="@string/Anleitung8"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    style="@android:style/ButtonBar"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/black"
                    android:orientation="horizontal" >
                    <TextView
                        android:id="@+id/step13Title"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:text=""
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/step13"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:text="@string/Anleitung8"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

    <LinearLayout
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/LayBottom"
        android:background="@color/black"
        android:orientation="vertical" >

        <LinearLayout
            style="@android:style/ButtonBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="horizontal" >

            <Button
                android:background="@drawable/custom_button"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_activity_statistic"
                android:onClick="ShowStatistic"
                android:enabled="false"
                android:id="@+id/btnStatistic" />

            <Button
                android:background="@drawable/custom_button"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/Neu"
                android:onClick="clearFiles"
                android:id="@+id/button" />

            <Button
                android:id="@+id/btnWeiter"
                android:background="@drawable/custom_button"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Weiter"
                android:onClick="CallFirstTask" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>


